ENEX FSL/snapshotDownload (1)/objects/WorkOrderLineItem.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><externalSharingModel>ControlledByParent</externalSharingModel><fields><fullName>Activo_Entrante__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>SGME</description><externalId>false</externalId><inlineHelpText>Cree el activo entrante</inlineHelpText><label>Activo Entrante</label><referenceTo>Asset</referenceTo><relationshipLabel>Partidas de órdenes de trabajo</relationshipLabel><relationshipName>Partidas_de_rdenes_de_trabajo</relationshipName><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>FSL__IsFillInCandidate__c</fullName><defaultValue>true</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Is Fill In Candidate</label><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__VisitingHours__c</fullName><deleteConstraint>SetNull</deleteConstraint><deprecated>false</deprecated><externalId>false</externalId><label>Visiting Hours</label><referenceTo>OperatingHours</referenceTo><relationshipLabel>Work Order Line Items</relationshipLabel><relationshipName>Work_Order_Line_Items</relationshipName><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>Familia_de_Producto__c</fullName><externalId>false</externalId><formula>TEXT(Product2.Family)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Familia de Producto</label><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Nombre_Producto__c</fullName><externalId>false</externalId><formula>Product2.Name</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Nombre Producto</label><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><recordTypes><fullName>SGME</fullName><active>true</active><label>SGME</label></recordTypes><recordTypes><fullName>SGMM</fullName><active>true</active><label>SGMM</label></recordTypes><sharingModel>ControlledByParent</sharingModel></CustomObject>